--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body{
     border-bottom: solid black 1px;
     gap:5px;
     align-items: center;
-    position: sticky;
-    top:0;
+    position:sticky;
+    top:0; 
     background-color: white;
     z-index: 1;
     
@@ -105,7 +105,21 @@ body{
     position: absolute;
     top:35%;
     left:10%;
+    animation-name:zoom;
+    animation-duration: 2s;
+    opacity:0;
+    animation-fill-mode: forwards;
 
+}
+@keyframes zoom{
+    0%{
+        opacity:0;
+        transform: scale(0);
+    }
+    100%{
+        opacity:1;
+        transform:scale(1);
+    }
 }
 .recomend__container{
     display: flex;
