--- a/style.css
+++ b/style.css
@@ -1,262 +1,338 @@
-*{
-    padding:0;
+* {
+    padding: 0;
     margin: 0;
 }
-body{
+
+body {
     font-family: "Gabarito", sans-serif;
-    background-color:whitesmoke;
+    background-color: whitesmoke;
 }
-.navbar{
-    padding:10px;
-    display:flex;
+
+.navbar {
+    padding: 10px;
+    display: flex;
     justify-content: space-between;
     border-bottom: solid black 1px;
-    gap:5px;
+    gap: 5px;
     align-items: center;
-    position:sticky;
-    top:0; 
+    position: sticky;
+    top: 0;
     background-color: white;
     z-index: 1;
-    
+
 }
-.navbar__s1__title img{
-    height:40px;
-    width:140px;
-    margin-left:10px;
+
+.navbar__s1__title img {
+    height: 40px;
+    width: 140px;
+    margin-left: 10px;
 }
-.navbar__s2{
-    padding:10px;
-    border:solid black 1px;
+
+.navbar__s2 {
+    padding: 10px;
+    border: solid black 1px;
     border-radius: 30px;
-    width:60%;
+    width: 60%;
     display: flex;
-    gap:5px;
-    
- 
+    gap: 5px;
+
+
 }
-.navbar__s2 input{
-    width:100%;
+
+.navbar__s2 input {
+    width: 100%;
     border: none;
-    background-color:transparent;
-} 
-.navbar__s2 input:focus{
-    outline:none;
+    background-color: transparent;
 }
-.navbar__s3{
+
+.navbar__s2 input:focus {
+    outline: none;
+}
+
+.navbar__s3 {
     display: flex;
-    gap:10px;
-    align-items:center;
+    gap: 10px;
+    align-items: center;
 }
-.menu__bar{
-    display: none;
-    
-}
-.mylearning{
+
+.mylearning {
     position: relative;
     cursor: pointer;
-    
+
 }
-.mylearning__popup{
+
+.mylearning__popup {
     position: absolute;
-    border:2px solid black;
+    border: 2px solid black;
     border: 20px;
     padding: 10px;
-    background-color:white;
-    color:black;
-    width:100px;
-    top:150%;
+    background-color: white;
+    color: black;
+    width: 100px;
+    top: 150%;
     display: none;
 
 
 
 }
-.mylearning:hover .mylearning__popup{
+
+.mylearning:hover .mylearning__popup {
     display: block;
 
 }
-.category{
+
+.category {
     display: flex;
     justify-content: space-around;
     border-bottom: solid 1px black;
 }
-.category p{
+
+.category p {
     background-color: bisque;
-    color:burlywood;
-    padding:12px;
-    border-radius:30px;
-    margin:7px;
+    color: burlywood;
+    padding: 12px;
+    border-radius: 30px;
+    margin: 7px;
 
 }
-.category p:hover{
-    background-color:pink;
+
+.category p:hover {
+    background-color: pink;
     color: white;
-    transform:scale(1.05);
+    transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
-.sale__image{
+
+.sale__image {
     position: relative;
 
 }
-.sale__image img{
-    width:100%;
+
+.sale__image img {
+    width: 100%;
 
 }
-.offer__box{
-    border:2px solid black;
+
+.offer__box {
+    border: 2px solid black;
     background-color: white;
     width: 35%;
     padding: 10px;
     position: absolute;
-    top:35%;
-    left:10%;
-    animation-name:zoom;
+    top: 35%;
+    left: 10%;
+    animation-name: zoom;
     animation-duration: 2s;
-    opacity:0;
+    opacity: 0;
     animation-fill-mode: forwards;
 
 }
-@keyframes zoom{
-    0%{
-        opacity:0;
+
+@keyframes zoom {
+    0% {
+        opacity: 0;
         transform: scale(0);
     }
-    100%{
-        opacity:1;
-        transform:scale(1);
+
+    100% {
+        opacity: 1;
+        transform: scale(1);
     }
 }
-.recomend__container{
+
+.recomend__container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 15px;
 }
-.recomend{
-    margin-top:20px;
+
+.recomend {
+    margin-top: 20px;
 }
-.course-card{
-    width:200px;
-    border:1px solid black;
-    border-radius:20px;
-    padding:10px;
-    margin-left:10px;
+
+.course-card {
+    width: 200px;
+    border: 1px solid black;
+    border-radius: 20px;
+    padding: 10px;
+    margin-left: 10px;
+    flex-grow: 1;
+    flex-basis: 20%
 }
-.course-card:hover{
-    transform:scale(1.05);
+
+.course-card:hover {
+    transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 
 }
-.course-card img{
-    width:100%;
-    height:200px;
-    border-radius:20px;
-}
-.course-card p{
-    padding:10px;
-    margin-top:12px;
+
+.course-card img {
+    width: 100%;
+    height: 200px;
+    border-radius: 20px;
 }
 
-.flex-grow__container{
+.course-card p {
+    padding: 10px;
+    margin-top: 12px;
+}
+
+.flex-grow__container {
     display: flex;
     justify-content: space-between;
     gap: 20px;
     flex-wrap: wrap;
-    margin-top:15px;
+    margin-top: 15px;
 
 }
-.flex-grow__container p{
-     border:1px solid black;
-     height:20px;
-     width:100px;
-     padding: 10px;
-     flex-grow: 1;
-     flex-basis:25%;
+
+.flex-grow__container p {
+    border: 1px solid black;
+    height: 20px;
+    width: 100px;
+    padding: 10px;
+    flex-grow: 1;
+    flex-basis: 25%;
 }
-.flex-grow__container p:hover{
+
+.flex-grow__container p:hover {
     background-color: black;
     color: beige;
 }
-.flex-grow__title{
+
+.flex-grow__title {
     margin-top: 20px;
 }
-.popular__title{
-    margin-top:15px;
+
+.popular__title {
+    margin-top: 15px;
 }
-.popular___desc{
-    margin-left:10px;
-}
-.popular__container{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-.end-card img{
-    height:150px;
-    width:270px;
-    margin-left:10px;
-}
-.end-card img:hover{
-    transform:scale(1.05);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-.end-card{
-    width: 200px;
-    margin:10px;
-    flex-grow: 1;
-    flex-basis:20%;
-}
-.popular{
-    margin-left:10px;
-}
-.end-card h3,p{
-    margin-left:10px;
-}
-.flex-grow__title{
+
+.popular___desc {
     margin-left: 10px;
 }
-.recomend___title{
-    margin-left:10px;
+    .popular__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-left:20px;
 }
-.footer{
+    
+
+
+.end-card img {
+    height: 150px;
+    width: 220px;
+    margin-left: 10px;
+}
+
+.end-card img:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.end-card {
+    width:200px;
+    flex-basis: 20%;
+    flex-grow: 1;
+    margin: 5px;
+
+}
+
+.popular {
+    margin-left: 10px;
+}
+
+
+.end-card h3,
+p {
+    margin-left: 10px;
+}
+
+.flex-grow__title {
+    margin-left: 10px;
+}
+
+.recomend___title {
+    margin-left: 10px;
+}
+
+.footer {
     padding: 30px;
     background-color: black;
     color: white;
-    margin-top:10px;
+    margin-top: 10px;
 }
 
-.footer__one{
+.footer__one {
     display: flex;
-    gap:50px;
+    gap: 50px;
 }
-.footer__two{
+
+.footer__two {
     display: flex;
     justify-content: space-around;
 }
-.footer__one__s1 p{
-    margin-top:8px;
+
+.footer__one__s1 p {
+    margin-top: 8px;
 }
-.footer__two__s2 p{
-    margin-top:8px;
+
+.footer__two__s2 p {
+    margin-top: 8px;
 }
-.footer__three__s3{
+
+.footer__three__s3 {
     margin-top: 25px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-@media screen and (max-width:800px) {
-    body{
-        font-size:10px;
-    }
+
+.menu__bar {
+    display: none;
 }
-@media screen and (max-width:600px) {
-    .end-card{
-        flex-basis:40%;
+
+
+@media screen and (max-width:800px) {
+    body {
+        font-size: 10px;
     }
-    .navbar__s2{
+
+
+
+
+
+}
+
+@media screen and (max-width:600px) {
+
+
+    .navbar__s2 {
         display: none;
     }
+
+    .course-card {
+        flex-basis: 40%;
+    }
+    .end-card{
+        flex-basis: 40%;
+    }
+
+    .category {
+        display: none;
+    }
+
+    .navbar__s2,
+    .navbar__s3 {
+        display: none;
+    }
+
+    .menu__bar {
+        display: block;
+        cursor: pointer;
+    }
+
 }
-
-
-
